Practised reactive form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,125 +1,7 @@
-<section class="container" [ngClass]="{'form-shadow': registrationForm.touched}" >
-  <header>Registration Form</header>
-
-  <form class="form" (ngSubmit)="onFormSubmitted()" #registrationForm="ngForm" >
-    <div class="column">
-      <div class="input-box">
-        <input required name="firstname" type="text" 
-           placeholder="First Name" #fname="ngModel" 
-           ngModel
-         />
-        <div>
-          <small *ngIf="fname.invalid && fname.touched">First Name is a requried field</small>
-          <span *ngIf="firstName" >You Enterd: {{firstName}}</span>
-        </div>
-      </div> 
-      <div class="input-box">
-        <input required name="lastname" 
-        type="text" placeholder="Last Name" 
-        #lname="ngModel" ngModel 
-       
-      />
-        <div>
-          <small *ngIf="lname.invalid && lname.touched">Last Name is a requried field</small>
-          <span *ngIf="lastName" >You Enterd: {{lastName}}</span>
-        </div>
-      </div>
-    </div>    
-
-    <div class="input-box">
-      <input required email name="email" type="text" 
-      placeholder="Email" #email="ngModel" 
-      ngModel 
-    
-    />
-      <div>
-        <small *ngIf="email.invalid && email.touched">Email is not valid</small>
-        <span *ngIf="emailAddress" >You Enterd: {{emailAddress}}</span>
-      </div>
-    </div>
-
-    <div class="column">
-      <div class="input-box">
-        <input name="phone" type="number" placeholder="Phone Number" ngModel />
-      </div>
-      <div class="input-box">
-        <input required name="dob" type="date" placeholder="Date of Birth" ngModel  #tempdob="ngModel" />
-      </div>
-    </div>
-
-    <div class="input-box">
-      <input name="username" type="text" placeholder="username" ngModel #uname="ngModel" />
-      <button 
-        type="button" class="btn-gen-username" 
-        [disabled]="fname.invalid || lname.invalid || tempdob.invalid" 
-        (click)="generateUsername()"
-      >
-        Create a Username
-      </button>
-      <div>
-        <small *ngIf="uname.invalid && uname.touched">Username is a required field</small>
-      </div>
-    </div>
-
-    <div class="gender-box">
-      <h3>Gender</h3>
-      <div class="gender-option">
-        <div class="gender" *ngFor="let gen of genders">
-          <input type="radio" [value]="gen.value" [id]="gen.id" name="gender" ngModel />
-          <label for="check-male">{{gen.display}}</label>
-        </div>
-      </div>
-    </div>
-
-    <div class="input-box address" ngModelGroup="address" #addr="ngModelGroup" >
-      <label>Address</label>
-      <input required name="street1" type="text" placeholder="Street address" ngModel />
-      <input name="street2" type="text" placeholder="Street address line 2" ngModel />
-      <div class="column">
-        <div class="select-box">
-          <select name="country" required ngModel >
-            <option hidden>Country</option>
-            <option>America</option>
-            <option>Japan</option>
-            <option>India</option>
-            <option>Nepal</option>
-          </select>
-        </div>
-        <input required name="city" type="text" placeholder="City" ngModel />
-      </div>
-      <div class="column">
-        <input name="region" type="text" placeholder="Region" ngModel />
-        <input required name="postal" type="number" placeholder="Postal code" ngModel  />
-      </div>
-      <div class="column">
-        <input type="checkbox" name="agreement" [ngModel]="isAgreed">
-        <label for="agreement"> I agree to terms & conditions</label><br>
-      </div>
-    </div>
-    <small *ngIf="addr.invalid && addr.touched" >Some of the address fileds don't contain a valid value</small>
-    <input type="submit" value="Submit" class="submit-btn"> 
-  </form>
-</section>
-
-<section class="user-detail-container">
-  <div class="user-details-container">
-    <div class="user-avatar">
-      <p>{{firstName.slice(0, 1).toUpperCase()}}{{lastName.slice(0, 1).toUpperCase()}}</p>
-    </div>
-    <div class="user-details">
-      <div class="user-name">
-        <h2>{{ firstName }} {{ lastName }}</h2>
-      </div>
-      <p><b>Email:</b> {{ emailAddress}}</p>
-      <p><b>Username:</b> {{ userName }} </p>
-      <p><b>Date of birth:</b> {{ dob }}</p>
-      <div class="user-name">
-        <h3>Address</h3>
-      </div>
-      <span>{{country }}</span>.
-      <span>{{ city }}</span>.
-      <span>{{ region }}</span>.
-      <span> {{ postal }}</span>
-    </div>
-  </div>
-</section>
+<nav style="min-width: 100vw; padding: 20px 20px; display: flex; justify-content: flex-start; gap: 20px;background-color: green;" >
+  <button class="nav_link" routerLink="" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}" >Template Driven form</button>
+  <button class="nav_link" routerLink="reactive-form" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}" >Reactive Form</button>
+</nav>
+<div style="display: flex; align-items: center; width: 100%; justify-content: center; margin-top: 30px;" class="container">
+  <router-outlet></router-outlet>
+</div>
