--- a/src/styles.css
+++ b/src/styles.css
@@ -9,8 +9,8 @@
 body {
   min-height: 100vh;
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
-  padding: 20px;
+  padding-inline: 20px;
   background: #282C35;
 }
